--- a/blocks/src/blocks/person-areas-of-expertise/style.scss
+++ b/blocks/src/blocks/person-areas-of-expertise/style.scss
@@ -5,6 +5,7 @@
 
     .person-areas-of-expertise__heading {
         margin-top: 0;
+        margin-bottom: 0;
     }
 
     .person-areas-of-expertise__terms {
